All frames are now backend-managed, minus socials which is coming next
