# src/main/java/com/ibrasoft/lensbridge/model/board/frames/FrameType.java
@@ -19,9 +19,9 @@ import java.util.Optional;
  */
 public enum FrameType {
     POSTER("poster"),
-    EVENT_LIST("event_list"),
-    DAILY_SCHEDULE("daily_schedule"),
     NEXT_PRAYER("next_prayer"),
+    AGENDA("agenda"),
+    INSTAGRAM("instagram"),
     JUMMAH("jummah"),
     ISLAMIC_QUOTE("islamic_quote");
 
